# TeleportationWarsWeapons

./: Cargo.toml  Config.toml  README.md
src/: Config.toml  main.rs
templates/: xml_read_bullet.xml  xml_read_index.xml  xml_read_ware.xml  xml_read_weapon.xml
