[package]
name = "tpwar_weapon_gen"
version = "0.1.0"
authors = ["mewosmith <48843615+mewosmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
strum = "0.10.0"
strum_macros = "0.10.0"
toml = "0.5.3"
serde = { version = "1.0", features = ["derive"] }